--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       type="image/png"
     />
     <!-- OG (Open Graph Data) -->
-    <meta property="og:title" content="Cathy's Portfolio" />
+    <meta property="og:title" content="Cathy Jung's Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="URL Placeholder" />
-    <meta property="og:image" content="Image URL Placeholder" />
+    <meta property="og:url" content="https://okj203.github.io/cathyjung-portfolio/" />
+    <meta property="og:image" content="https://okj203.github.io/cathyjung-portfolio/images/og.webp" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
