updated css so the elements won't get pushed up and down due to typejs changing the text length

--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
           />
           <h2 class="home__title">
             Hi, I&#39;m Cathy.<br />
-            I'm a <strong class="home__title--strong">technical writer</strong>.
+            <div class="home__title--strong__container">
+
+              <strong class="home__title--strong"></strong>
+            </div>
           </h2>
           <p class="home__description">
             Technical writer and curriculum developer based in NY, U.S.
